<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_preset"
            android:title="@string/menu_preset" />
        <item
            android:id="@+id/nav_budget"
            android:title="@string/menu_budgeting_plan" />
        <item
            android:id="@+id/nav_trends"
            android:title="@string/menu_trends" />
    </group>

    <item
        android:id="@+id/nav_about"
        android:title="@string/menu_about" />

</menu>
